fixed partner logos on mobile

--- a/src/styles/sass/base.css
+++ b/src/styles/sass/base.css
@@ -430,10 +430,11 @@ body, html {
   @media (max-width: 75em) {
     .sponsors__logos.centi {
       padding: 2rem;
-      padding-bottom: 0rem; } }
+      padding-bottom: 7.5rem; } }
   @media (max-width: 37.5em) {
     .sponsors__logos.centi {
-      padding: 6rem 14% 1rem 14%; } }
+      padding: 6rem 14% 1rem 14%;
+      padding-bottom: 7.5rem; } }
 
 .sponsors__giga {
   min-height: 21rem;
