--- a/src/styles/sass/components/landing/_sponsors.sass
+++ b/src/styles/sass/components/landing/_sponsors.sass
@@ -49,9 +49,10 @@
                 padding-bottom: 5rem
                 @include respond(tab-land)
                     padding: 2rem
-                    padding-bottom: 0rem
+                    padding-bottom: 7.5rem
                 @include respond(phone)
                         padding: 6rem 14% 1rem 14%
+                        padding-bottom: 7.5rem
                 
     &__giga
         min-height: 21rem
